# RECORD

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
arduino-codebase/imu/: imu.ino
arduino-codebase/trigger/: trigger.ino
docs/: Makefile  conf.py  index.rst  overview.rst
docs/api/: modules.rst  record.core.database.rst  record.core.geometry.rst  record.core.postprocessing.rst  record.core.rst  record.gui._extanded_qtwidgets.rst  record.gui._extanded_vtk.rst  record.gui._motor.rst  record.gui.log_consol.rst  record.gui.main.rst  record.gui.rst  record.gui.sensor_manager.rst  record.gui.sequence.rst  record.gui.setup_logger.rst  record.gui.utils.rst  record.rst
pcb/: PCB_RECORD_Pod_BNO055.dch  PCB_RECORD_Pod_BNO055.dip
src/record/configs/: config.yml
src/record/core/: __init__.py  constants.py  database.py  decorators.py  device.py  geometry.py  imu.py  postprocessing.py  setup_logger.py  test.py  trigger.py  utils.py
src/record/gui/: __init__.py  _debug.py  _extanded_qtwidgets.py  _extanded_vtk.py  _motor.py  log_consol.py  main.py  sensor_manager.py  sequence.py  setup_logger.py  utils.py
src/record/gui/ui_interfaces/: DockWidget_console.ui  DockWidget_console_ui_mod.py  DockWidget_postprocessing.ui  DockWidget_postprocessing_ui_mod.py  DockWidget_sensor_manager.ui  DockWidget_sensor_manager_ui_mod.py  DockWidget_sequence.ui  DockWidget_sequence_ui_mod.py  IMU_manager_line.ui  IMU_manager_line_ui_mod.py  MainWindow.ui  MainWindow_ui_mod.py  dock_igus_manager.ui  dock_igus_manager_ui_mod.py
src/record/gui/ui_interfaces/icons/: icons.drawio
wiki/: how_to_use_soft.md  record.md
